source/postcard-schema/tests/snapshots/schema__insta_Enums.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "Enums :: SCHEMA"
---
NamedType {
    name: "Enums",
    ty: Enum(
        [
            NamedVariant {
                name: "Unit",
                ty: UnitVariant,
            },
            NamedVariant {
                name: "Nt",
                ty: NewtypeVariant(
                    NamedType {
                        name: "u64",
                        ty: U64,
                    },
                ),
            },
            NamedVariant {
                name: "Tup",
                ty: TupleVariant(
                    [
                        NamedType {
                            name: "u32",
                            ty: U32,
                        },
                        NamedType {
                            name: "bool",
                            ty: Bool,
                        },
                    ],
                ),
            },
        ],
    ),
}
