source/postcard-schema/tests/snapshots/schema__insta_NewTypeStruct.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "NewTypeStruct :: SCHEMA"
---
NamedType {
    name: "NewTypeStruct",
    ty: NewtypeStruct(
        NamedType {
            name: "String",
            ty: String,
        },
    ),
}
