source/postcard-schema/tests/snapshots/schema__insta_TestEnum2.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "TestEnum2 :: SCHEMA"
---
NamedType {
    name: "TestEnum2",
    ty: Enum(
        [
            NamedVariant {
                name: "Nt",
                ty: NewtypeVariant(
                    NamedType {
                        name: "u64",
                        ty: U64,
                    },
                ),
            },
            NamedVariant {
                name: "Tup",
                ty: TupleVariant(
                    [
                        NamedType {
                            name: "u64",
                            ty: U64,
                        },
                        NamedType {
                            name: "bool",
                            ty: Bool,
                        },
                    ],
                ),
            },
        ],
    ),
}
