source/postcard-schema/tests/snapshots/schema__insta_TestStruct1.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "TestStruct1 :: SCHEMA"
---
NamedType {
    name: "TestStruct1",
    ty: Struct(
        [
            NamedValue {
                name: "a",
                ty: NamedType {
                    name: "i8",
                    ty: I8,
                },
            },
            NamedValue {
                name: "b",
                ty: NamedType {
                    name: "i16",
                    ty: I16,
                },
            },
            NamedValue {
                name: "c",
                ty: NamedType {
                    name: "i32",
                    ty: I32,
                },
            },
            NamedValue {
                name: "d",
                ty: NamedType {
                    name: "i64",
                    ty: I64,
                },
            },
        ],
    ),
}
