source/postcard-schema/tests/snapshots/schema__insta_TestStruct3.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "TestStruct3 :: SCHEMA"
---
NamedType {
    name: "TestStruct3",
    ty: NewtypeStruct(
        NamedType {
            name: "u64",
            ty: U64,
        },
    ),
}
