source/postcard-schema/tests/snapshots/schema__insta_TestStruct4.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "TestStruct4 :: SCHEMA"
---
NamedType {
    name: "TestStruct4",
    ty: TupleStruct(
        [
            NamedType {
                name: "u64",
                ty: U64,
            },
            NamedType {
                name: "bool",
                ty: Bool,
            },
        ],
    ),
}
