source/postcard-schema/tests/snapshots/schema__insta_TupStruct.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "TupStruct :: SCHEMA"
---
NamedType {
    name: "TupStruct",
    ty: TupleStruct(
        [
            NamedType {
                name: "u64",
                ty: U64,
            },
            NamedType {
                name: "String",
                ty: String,
            },
        ],
    ),
}
