source/postcard-schema/tests/snapshots/schema__insta_UnitStruct.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "UnitStruct :: SCHEMA"
---
NamedType {
    name: "UnitStruct",
    ty: UnitStruct,
}
