source/postcard-schema/tests/snapshots/schema__postcard_snapshot_Slice.snap
---
source: source/postcard-schema/tests/schema.rs
expression: "Slice :: SCHEMA"
---
NamedType {
    name: "Slice",
    ty: Struct(
        [
            NamedValue {
                name: "x",
                ty: NamedType {
                    name: "[T]",
                    ty: Seq(
                        NamedType {
                            name: "u8",
                            ty: U8,
                        },
                    ),
                },
            },
        ],
    ),
}
